--- a/index.html
+++ b/index.html
@@ -1,18 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WAC animation</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>3D Loading Animation</title>
+<style>
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f0f0f0;
+  }
+
+  .spinner {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    perspective: 1000px;
+  }
+
+  .spinner div {
+    box-sizing: border-box;
+    width: 150px;
+    height: 150px;
+    border-radius: 150%;
+    border: 5px solid transparent;
+    border-top-color: #961b0a;
+    position: absolute;
+    animation: spin 2s linear infinite;
+  }
+
+  .spinner div:nth-child(1) {
+    animation-delay: 0s;
+  }
+
+  .spinner div:nth-child(2) {
+    animation-delay: 0.3s;
+  }
+
+  .spinner div:nth-child(3) {
+    animation-delay: 0.6s;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotateX(35deg) rotateY(0deg) rotateZ(0deg);
+    }
+    100% {
+      transform: rotateX(35deg) rotateY(360deg) rotateZ(0deg);
+    }
+  }
+</style>
 </head>
 <body>
-    <div class="wrapper">
-        <svg class="item">
-            <circle class="circle" cx="50%" cy="50%" r="45%"></circle>
-            <circle class="bar" cx="50%" cy="50%" r="45%"></circle>
-        </svg>
-        <div class="content"> 75%</div>
-    </div>
+  <div class="spinner">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
 </body>
+</html>
